# acp-mcp

./: README.md  pyproject.toml  server.py
.github/workflows/: release.yml
src/acp_mcp/: __init__.py  adapter.py
tests/: conftest.py
tests/e2e/fixtures/: session.py
tests/e2e/test_suites/: test_resources.py  test_tools.py
tests/unit/: test_adapter.py
