[project]
name = "acp-mcp"
version = "0.3.0"
description = "Serve ACP agents over MCP"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "IBM Corp." }]
maintainers = [{ name = "Tomas Pilar", email = "thomas7pilar@gmail.com" }]
requires-python = ">=3.11, <4.0"
dependencies = ["acp-sdk>=0.8.4", "mcp>=1.6.0"]

[project.scripts]
acp-mcp = "acp_mcp:cli"
serve = "acp_mcp:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0"]
